--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <h1>hsab</h1>
-    <footer>&copy; 2020 The spectacular me</footer>
+    <footer>
+      <h5>Awesomeness Inc.</h5>
+      <small>A quality that inspires awe.</small>
+    </footer>
   </body>
 </html>
