--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <h5>Awesomeness Inc.</h5>
       <small>A quality that inspires awe.</small>
     </footer>
+    <small>© 2018 Copyright: Awesomeness Inc.</small>
   </body>
 </html>
