new section background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>hsab</h1>
+		<section>bla</section>
     <footer>&copy; 2020 The spectacular me</footer>
   </body>
 </html>
